--- a/Arcade-Learning-Environment-0.6.1/Makefile
+++ b/Arcade-Learning-Environment-0.6.1/Makefile
@@ -1,23 +1,35 @@
 CXX      := g++
-CXXFLAGS := -std=c++17 -Iinclude -Wall -Wextra -pedantic
-TARGET   := main
+CXXFLAGS := -std=c++17 -Wall -Wextra -pedantic -Iinclude
+LDFLAGS  := -Wl,-rpath=. -LSDL
+LIBS     := libale.so
 
-SRC := \
-    main.cpp \
-    data.cpp \
-    preprocess.cpp \
-    src/perceptron.cpp \
-    src/neural_network.cpp \
-    src/activation_functions/step.cpp \
-    src/activation_functions/relu.cpp \
-    src/activation_functions/softmax.cpp \
-    src/weights_initialization/kaiming.cpp
+# Objetivo por defecto: compilar todos
+all: main perceptronMin NNMin
 
-$(TARGET): $(SRC)
+# Compilar main
+main: main.cpp data.cpp preprocess.cpp \
+      src/perceptron.cpp src/neural_network.cpp \
+      src/activation_functions/step.cpp \
+      src/activation_functions/relu.cpp \
+      src/activation_functions/softmax.cpp \
+      src/weights_initialization/kaiming.cpp
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
+# Compilar perceptronMin
+perceptronMin: src/ML_IA_Perceptron.cpp src/activation_functions/step.cpp
+	$(CXX) -o $@ $^ $(LIBS) $(LDFLAGS)
+
+# Compilar NNMin
+NNMin: src/ML_IA_NN.cpp \
+       src/neural_network.cpp \
+       src/weights_initialization/kaiming.cpp \
+       src/activation_functions/relu.cpp \
+       src/activation_functions/softmax.cpp
+	$(CXX) -o $@ $^ $(CXXFLAGS) $(LIBS) $(LDFLAGS)
+
+# Limpiar
 clean:
-	rm -f $(TARGET)
+	rm -f main perceptronMin NNMin
 
 .PHONY: all clean
-all: $(TARGET)
+
